test/expected/declare_o_plus2_rkd_rk.out
declare ++ as operator (reference to S, double) returning reference to S
                                        ^
41: error: parameter of postfix non-member operator ++ must be int
